update 06/10 front barra

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,212 +1,2 @@
-.hide, .content .content_aside .contacto, .content .content_sites, .content #btn_open-close .close {
-  display: none; }
-
-.show {
-  display: block; }
-
-.adjust, .content .content_aside .logo svg, .content #btn_open-close .open svg {
-  display: block;
-  width: 100%;
-  height: auto; }
-
-.text-center, .content .content_aside .redes ul, .content #btn_open-close .close {
-  text-align: center; }
-
-.text-left {
-  text-align: left; }
-
-.text-right {
-  text-align: right; }
-
-body {
-  font-weight: bold;
-  font-size: 12px;
-  margin: 0; }
-
-@-webkit-keyframes open {
-  0% {
-    height: 27px; }
-  100% {
-    height: 250px; } }
-@-moz-keyframes open {
-  0% {
-    height: 27px; }
-  100% {
-    height: 250px; } }
-@-o-keyframes open {
-  0% {
-    height: 27px; }
-  100% {
-    height: 250px; } }
-@keyframes open {
-  0% {
-    height: 27px; }
-  100% {
-    height: 250px; } }
-@-webkit-keyframes close {
-  0% {
-    height: 250px; }
-  100% {
-    height: 27px; } }
-@-moz-keyframes close {
-  0% {
-    height: 250px; }
-  100% {
-    height: 27px; } }
-@-o-keyframes close {
-  0% {
-    height: 250px; }
-  100% {
-    height: 27px; } }
-@keyframes close {
-  0% {
-    height: 250px; }
-  100% {
-    height: 27px; } }
-.animate_open {
-  -webkit-animation: open 1s ease-in-out forwards;
-  -moz-animation: open 1s ease-in-out forwards;
-  animation: open 1s ease-in-out forwards; }
-
-.animate_close {
-  -webkit-animation: close 1s alternate forwards;
-  -moz-animation: close 1s alternate forwards;
-  animation: close 1s alternate forwards; }
-
-.content {
-  width: 100%;
-  height: 27px;
-  background-color: #000;
-  position: fixed;
-  bottom: 0;
-  overflow: hidden;
-  box-shadow: 0px 0px 5px 0px #000; }
-  .content .content_aside {
-    background-color: #fff;
-    position: absolute;
-    width: 283px;
-    height: 250px;
-    left: -283px; }
-    .content .content_aside .logo {
-      width: 74px;
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 5px;
-      margin: 0 auto;
-      opacity: 0; }
-    .content .content_aside .redes {
-      opacity: 0;
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: 0 auto; }
-      .content .content_aside .redes ul {
-        list-style: none;
-        margin: 0;
-        padding: 0; }
-        .content .content_aside .redes ul li {
-          width: 37px;
-          height: 37px;
-          padding: 0;
-          margin: 0 10px;
-          font-size: 20px;
-          background-color: #000;
-          border-top-left-radius: 50%;
-          border-top-right-radius: 50%;
-          border-bottom-left-radius: 50%;
-          border-bottom-right-radius: 50%;
-          border-top-left-radius: 50%;
-          border-bottom-left-radius: 50%;
-          border-top-right-radius: 50%;
-          border-bottom-right-radius: 50%;
-          display: inline-block; }
-          .content .content_aside .redes ul li a {
-            display: table;
-            width: 100%;
-            height: 100%;
-            color: #fff;
-            text-decoration: none; }
-            .content .content_aside .redes ul li a i {
-              display: table-cell;
-              vertical-align: middle; }
-          .content .content_aside .redes ul li.social_fb:hover {
-            background-color: #3b5998; }
-          .content .content_aside .redes ul li.social_tw:hover {
-            background-color: #00aced; }
-          .content .content_aside .redes ul li.social_ig:hover {
-            background-color: #517fa4; }
-  .content .tab-content {
-    display: none; }
-    .content .tab-content.current {
-      display: inherit; }
-  .content .content_sites {
-    position: absolute;
-    left: 310px;
-    padding-top: 50px; }
-    .content .content_sites h2 {
-      color: #fff;
-      font-family: "Fjalla One", sans-serif;
-      font-size: 12px;
-      text-transform: uppercase;
-      margin: 0; }
-    .content .content_sites ul {
-      margin: 0;
-      padding: 0;
-      float: left;
-      list-style: none; }
-      .content .content_sites ul li {
-        color: #fff;
-        font-size: 10px;
-        font-family: "Roboto", sans-serif; }
-        .content .content_sites ul li a {
-          color: red; }
-  .content #btn_open-close .open {
-    background-color: #fff;
-    max-width: 132px;
-    height: 27px;
-    padding: 3px 0 0 15px;
-    cursor: pointer; }
-    .content #btn_open-close .open svg {
-      max-width: 99px;
-      max-height: 20px; }
-  .content #btn_open-close .close {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    right: 0;
-    background-color: #fff;
-    font-family: "Roboto", sans-serif;
-    color: #000;
-    width: 27px;
-    height: 27px; }
-    .content #btn_open-close .close p {
-      display: table;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%; }
-      .content #btn_open-close .close p span {
-        display: table-cell;
-        vertical-align: middle; }
-  .content #btn_open-close .tabs {
-    font-size: 10px;
-    font-family: "Roboto", sans-serif;
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    position: absolute;
-    left: 148px;
-    top: 0; }
-    .content #btn_open-close .tabs li {
-      background: none;
-      color: #fff;
-      display: inline-block;
-      padding: 10px 15px;
-      cursor: pointer; }
-      .content #btn_open-close .tabs li.current {
-        background: #fff;
-        color: #000; }
-
+.hide,.content .content_aside .contacto,.content .content_sites,.content #btn_open-close .close_main{display:none}.show{display:block}.adjust,.content .content_aside .logo svg,.content #btn_open-close .open svg{display:block;width:100%;height:auto}.text-center,.content .content_aside .redes ul,.content .content_sites ul#share li,.content #btn_open-close .close_main{text-align:center}.text-left{text-align:left}.text-right{text-align:right}body{font-weight:bold;font-size:12px;margin:0}@-webkit-keyframes open{0%{height:27px}100%{height:250px}}@-moz-keyframes open{0%{height:27px}100%{height:250px}}@-o-keyframes open{0%{height:27px}100%{height:250px}}@keyframes open{0%{height:27px}100%{height:250px}}@-webkit-keyframes close{0%{height:250px}100%{height:27px}}@-moz-keyframes close{0%{height:250px}100%{height:27px}}@-o-keyframes close{0%{height:250px}100%{height:27px}}@keyframes close{0%{height:250px}100%{height:27px}}.animate_open{-webkit-animation-name:open;-moz-animation-name:open;animation-name:open;-webkit-animation-duration:1s;-moz-animation-duration:1s;animation-duration:1s;-webkit-animation-timing-function:ease-in-out;-moz-animation-timing-function:ease-in-out;animation-timing-function:ease-in-out;-webkit-animation-fill-mode:forwards;-moz-animation-fill-mode:forwards;animation-fill-mode:forwards}.animate_close{-webkit-animation-name:close;-moz-animation-name:close;animation-name:close;-webkit-animation-duration:1s;-moz-animation-duration:1s;animation-duration:1s;-webkit-animation-timing-function:ease;-moz-animation-timing-function:ease;animation-timing-function:ease;-webkit-animation-fill-mode:forwards;-moz-animation-fill-mode:forwards;animation-fill-mode:forwards}.content{width:100%;background-color:#000;position:fixed;z-index:99999;bottom:0;overflow:hidden;box-shadow:0px 0px 5px 0px #000}.content .content_aside{background-color:#fff;position:absolute;width:283px;height:250px;left:-283px}.content .content_aside .logo{width:74px;position:absolute;left:0;right:0;top:5px;margin:0 auto;opacity:0}.content .content_aside .redes{opacity:0;position:absolute;left:0;right:0;bottom:0;margin:0 auto}.content .content_aside .redes ul{list-style:none;margin:0;padding:0}.content .content_aside .redes ul li{width:37px;height:37px;padding:0;margin:0 10px;font-size:20px;background-color:#000;border-top-left-radius:50%;border-top-right-radius:50%;border-bottom-left-radius:50%;border-bottom-right-radius:50%;border-top-left-radius:50%;border-bottom-left-radius:50%;border-top-right-radius:50%;border-bottom-right-radius:50%;display:inline-block}.content .content_aside .redes ul li a{display:table;width:100%;height:100%;color:#fff;text-decoration:none}.content .content_aside .redes ul li a i{display:table-cell;vertical-align:middle}.content .content_aside .redes ul li.social_fb:hover{background-color:#3b5998}.content .content_aside .redes ul li.social_tw:hover{background-color:#00aced}.content .content_aside .redes ul li.social_ig:hover{background-color:#517fa4}.content .tab-content{display:none}.content .tab-content.current{display:inherit}.content .content_sites{position:absolute;left:310px;padding-top:50px}.content .content_sites h2{color:#fff;font-family:"Fjalla One",sans-serif;font-size:12px;text-transform:uppercase;margin:5px 0 0;padding:0}.content .content_sites ul{margin:5px 0;padding:0;float:left;list-style:none}.content .content_sites ul li{margin-left:10px}.content .content_sites ul li a{color:#fff;font-size:10px;font-family:"Roboto",sans-serif;text-decoration:none}.content .content_sites ul#share li{width:37px;height:37px;padding:0;margin:0 10px;background-color:#fff;border-top-left-radius:50%;border-top-right-radius:50%;border-bottom-left-radius:50%;border-bottom-right-radius:50%;border-top-left-radius:50%;border-bottom-left-radius:50%;border-top-right-radius:50%;border-bottom-right-radius:50%;display:inline-block}.content .content_sites ul#share li a{display:table;width:100%;height:100%;color:#000;text-decoration:none;font-size:20px}.content .content_sites ul#share li a i{display:table-cell;vertical-align:middle}.content .content_sites ul#share li.social_fb:hover{background-color:#3b5998}.content .content_sites ul#share li.social_tw:hover{background-color:#00aced}.content #btn_open-close .open{position:relative;float:left;background-color:#fff;min-width:132px;height:27px;padding:3px 0 0 15px;cursor:pointer}.content #btn_open-close .open svg{max-width:99px;max-height:20px}.content #btn_open-close .close_main{float:right;cursor:pointer;background-color:#fff;font-family:"Roboto",sans-serif;color:#000;width:27px;height:27px}.content #btn_open-close .close_main p{display:table;margin:0;padding:0;width:100%;height:100%}.content #btn_open-close .close_main p i{display:table-cell;vertical-align:middle}.content #btn_open-close .select_category{float:left;background-image:url(../img/fle-category.gif);background-position:center left;background-repeat:no-repeat;padding-left:24px;font-size:14px;font-family:"Roboto",sans-serif;color:#fff;text-transform:uppercase;height:29px;margin-right:5px}.content #btn_open-close .select_category p{margin:0;padding:0;display:table;height:29px}.content #btn_open-close .select_category p span{display:table-cell;vertical-align:middle}.content #btn_open-close .tabs{font-size:10px;font-family:"Roboto",sans-serif;margin:0px;padding:0px;list-style:none;float:left;position:relative}.content #btn_open-close .tabs li{background:none;color:#fff;display:inline-block;padding:2px 15px;cursor:pointer}.content #btn_open-close .tabs li.current{background:#fff;color:#000}.content #btn_open-close .tabs li.current:hover{color:#000;font-weight:bold}.content #btn_open-close .tabs li:hover{color:red}
 /*# sourceMappingURL=main.css.map */
