--- a/prod/sass/partials/_barra.scss
+++ b/prod/sass/partials/_barra.scss
@@ -1,8 +1,8 @@
 .content{
 	width:100%;
-	height: 27px;
 	background:{color:#000;}
 	position: fixed;
+	z-index: 99999;
 	bottom: 0;
 	overflow:hidden;
 	box-shadow: 0px 0px 5px 0px #000;
@@ -98,27 +98,67 @@
 			color:#fff;
 			font: {family:$font_fjalla;size:12px;}
 			text:{transform:uppercase;}
-			margin: 0;
+			margin: 5px 0 0;
+			padding:0;
 		}
 		ul{
-			margin: 0;
+			margin: 5px 0;
 			padding: 0;
 			float:left;
 			list-style:none;
 			li{
-				color:#fff;
-				font:{size:10px;family:$font_roboto;}
+				margin:{left:10px;}
 				a{
-					color:red;
+					color: #fff;
+					font:{size:10px;family:$font_roboto;}
+					text:{decoration:none;}
 				}
 			}
-
+			&#share{
+				li{
+					width:37px;
+					height: 37px;
+					padding: 0;
+					margin: 0 10px;
+					background: {color:#fff;}
+					@include border-top-radius(50%);
+					@include border-bottom-radius(50%);
+					@include border-left-radius(50%);
+					@include border-right-radius(50%);
+					display: inline-block;
+					@extend .text-center;
+					a{
+						display: table;
+						width:100%;
+						height:100%;
+						color:#000;
+						text:{decoration:none;}
+						font:{size:20px;}
+						i{
+							display: table-cell;
+							vertical-align: middle;
+						}	
+					}
+					&.social_fb{
+						&:hover{
+							background:{color:#3b5998;}
+						}
+					}
+					&.social_tw{
+						&:hover{
+							background:{color:#00aced;}
+						}
+					}
+				}
+			}
 		}
 	}
 	#btn_open-close{
 		.open{
+			position: relative;
+			float: left;
 			background: {color:#fff;}
-			max-width:132px;
+			min-width:132px;
 			height:27px;
 			padding:3px 0 0 15px;
 			cursor: pointer;
@@ -128,11 +168,9 @@
 				max-height:20px;
 			}
 		}
-		.close{
-			position:absolute;
+		.close_main{
+			float: right;
 			cursor: pointer;
-			top:0;
-			right:0;
 			background: {color:#fff;}
 			font:{family:$font_roboto;}
 			color:#000;
@@ -146,6 +184,27 @@
 				padding: 0;
 				width:100%;
 				height: 100%;
+				i{
+					display: table-cell;
+					vertical-align: middle;
+				}
+			}
+		}
+		.select_category{
+			float:left;
+			//@extend .hide;
+			background:{image:url(../img/fle-category.gif);position:center left;repeat:no-repeat;}
+			padding:{left:24px;}
+			font:{size:14px;family:$font_roboto;}
+			color:#fff;
+			text:{transform:uppercase;}
+			height: 29px;
+			margin-right:5px;
+			p{
+				margin: 0;
+				padding:0;
+				display: table;
+				height: 29px;
 				span{
 					display: table-cell;
 					vertical-align: middle;
@@ -157,18 +216,24 @@
 			margin: 0px;
 			padding: 0px;
 			list-style: none;
-			position: absolute;
-			left:148px;
-			top:0;
+			float: left;
+			position: relative;
 			li{
 				background: none;
 				color: #fff;
 				display: inline-block;
-				padding: 10px 15px;
+				padding: 2px 15px;
 				cursor: pointer;
 				&.current{
 					background: #fff;
 					color: #000;
+					&:hover{
+						color:#000;
+						font:{weight:bold;}
+					}
+				}
+				&:hover{
+					color:red;
 				}
 			}
 		}
