--- a/prod/sass/partials/_barra.scss
+++ b/prod/sass/partials/_barra.scss
@@ -1,5 +1,6 @@
 .content{
 	width:100%;
+	height: 27px;
 	background:{color:#000;}
 	position: fixed;
 	z-index: 99999;
@@ -167,6 +168,9 @@
 				max-width:99px;
 				max-height:20px;
 			}
+			.open_sli2{
+				@extend .hide;
+			}
 		}
 		.close_main{
 			float: right;
@@ -190,6 +194,10 @@
 				}
 			}
 		}
+		.close_slide{
+			@extend .close_main;
+			display: block;
+		}
 		.select_category{
 			float:left;
 			//@extend .hide;
@@ -211,7 +219,7 @@
 				}
 			}
 		}
-		.tabs{
+		.pestanas{
 			font:{size:10px;family:$font_roboto;}
 			margin: 0px;
 			padding: 0px;
@@ -222,7 +230,7 @@
 				background: none;
 				color: #fff;
 				display: inline-block;
-				padding: 2px 15px;
+				padding: 8px 15px;
 				cursor: pointer;
 				&.current{
 					background: #fff;
@@ -236,6 +244,48 @@
 					color:red;
 				}
 			}
+		}
+		.feeds{
+			float: left;
+			font:{size:10px;family:$font_roboto;}
+			max-width:500px;
+			overflow: hidden;
+			.rssBody{
+				ul{
+					list-style:none;
+					margin: 0;
+					padding: 0;
+					li{
+						float:left;
+						margin: 0 20px;
+						padding: 2px 0 0;
+						min-width: 500px;
+						h3{
+							margin: 0;
+							padding: 0;
+							font:{size:11px;}
+							line:{height:12px;}
+						}
+						p{
+							font: {size:10px;}
+							margin: 0;
+							padding:0;
+							width:200px;
+							overflow: hidden;
+						}
+					}
+				}
+				a{
+					color:#fff;
+					text:{decoration: none;}
+					&:hover{
+						color: red;
+					}
+				}
+			}
+		}
+		.marquee{
+		  overflow: hidden;
 		}
 	}
 }
