--- a/prod/sass/partials/_barra.scss
+++ b/prod/sass/partials/_barra.scss
@@ -1,4 +1,4 @@
-.content{
+.contentbarra{
 	width:100%;
 	height: 27px;
 	background:{color:#000;}
@@ -7,13 +7,13 @@
 	bottom: 0;
 	overflow:hidden;
 	box-shadow: 0px 0px 5px 0px #000;
-	.content_aside{
+	.content_asidebarra{
 		background: {color:#fff;}
 		position: absolute;
 		width:283px;
 		height:250px;
 		left:-283px;
-		.logo{
+		.logobarra{
 			width:74px;
 			position: absolute;
 			left:0;
@@ -25,7 +25,7 @@
 				@extend .adjust;	
 			}
 		}
-		.redes{
+		.redesbarra{
 			opacity:0;
 			position: absolute;
 			left:0;
@@ -60,17 +60,17 @@
 							vertical-align: middle;
 						}	
 					}
-					&.social_fb{
+					&.social_fbbarra{
 						&:hover{
 							background:{color:#3b5998;}
 						}
 					}
-					&.social_tw{
+					&.social_twbarra{
 						&:hover{
 							background:{color:#00aced;}
 						}
 					}
-					&.social_ig{
+					&.social_igbarra{
 						&:hover{
 							background:{color:#517fa4;}
 						}
@@ -78,7 +78,7 @@
 				}
 			}
 		}
-		.contacto{
+		.contactobarra{
 			@extend .hide;
 		}
 	}
@@ -90,7 +90,7 @@
 		}
 	}
 
-	.content_sites{
+	.content_sitesbarra{
 		position: absolute;
 		left:310px;
 		padding-top:50px;
@@ -115,7 +115,7 @@
 					text:{decoration:none;}
 				}
 			}
-			&#share{
+			&#sharebarra{
 				li{
 					width:37px;
 					height: 37px;
@@ -140,12 +140,12 @@
 							vertical-align: middle;
 						}	
 					}
-					&.social_fb{
+					&.social_fbbarra{
 						&:hover{
 							background:{color:#3b5998;}
 						}
 					}
-					&.social_tw{
+					&.social_twbarra{
 						&:hover{
 							background:{color:#00aced;}
 						}
@@ -155,7 +155,7 @@
 		}
 	}
 	#btn_open-close{
-		.open{
+		.openbarra{
 			position: relative;
 			float: left;
 			background: {color:#fff;}
@@ -226,6 +226,7 @@
 			list-style: none;
 			float: left;
 			position: relative;
+			line-height: 25px;
 			li{
 				background: none;
 				color: #fff;
